[package]
name = "dollbergio"
version = "0.1.0"
authors = ["Stephan Dollberg <stephan.dollberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
actix-rt = "2.7.0"
sha2 = "0.10.2"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["process", "time"] }
askama = "0.11.1"
futures = "0.3.21"
actix-files = "0.6.1"
hex = "0.4.3"
log = "0.4.17"
env_logger = "0.9.0"

[profile.release]
lto = true
